fix parallax on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -12,8 +12,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-position: 70%;
   background-size: cover;
   transform-origin: 0 0;
